<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabFragment2">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/SelectStringBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_any_stringbuffer_function"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SelectStringBuffer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/sb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/length"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="length"/>

            <Button
                android:id="@+id/sb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb1"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/capacity"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="capacity"/>

            <Button
                android:id="@+id/sb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb2"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_green_light"
                android:text="ensurecapacity"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="ensurecapacity"/>

            <Button
                android:id="@+id/sb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb3"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/setlength"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="setlength"/>

            <Button
                android:id="@+id/sb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb4"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_purple"
                android:text="@string/append"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="Append"/>

            <Button
                android:id="@+id/sb6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb5"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/insert"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="Insert"/>

            <Button
                android:id="@+id/sb7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb6"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/reverse"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="Reverse"/>

            <Button
                android:id="@+id/sb8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb7"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="Delete"/>

            <Button
                android:id="@+id/sb9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb8"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/deletecharat"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="deletecharat"/>

            <Button
                android:id="@+id/sb10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb9"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_purple"
                android:text="@string/replace"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="Replace"/>

            <Button
                android:id="@+id/sb11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sb10"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/substring"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:onClick="Substrings"
                android:layout_marginBottom="10dp"/>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>