<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabFragment3">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/aboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="38sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/aboutus_pic"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:layout_below="@id/aboutus"
        android:src="@drawable/nmnm" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutus_pic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_atifhusain_hunachagi"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dept_of_ise_5th_sem"
                android:textSize="20sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_blue_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_zahid_jamkhandi"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dept_of_ise_5th_sem"
                android:textSize="20sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_blue_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_any_quries_contact_codersswift_gmail_com"
                android:textSize="23sp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>